add footer and center it

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@ button:after {
   transition: 0.2s;
   background-color: #3a86ff;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
     </style>
+<footer>
+    <p>Made by <a href="https://josiasw.dev">Josias Aurel</a>. Have an amazing day.</p>
+</footer>
 </body>
 </html>
