add experiment code and change link style

--- a/probability/01/index.html
+++ b/probability/01/index.html
@@ -94,7 +94,7 @@
             <br>
 
             <p>
-                All the code for this experiment can be found [here].
+                All the code for this experiment can be found <a href="https://github.com/JosiasAurel/experiments/tree/master/probability/01">here</a>.
             </p>
         </article>
     </div>
