add functionality to download experiments summary

--- a/probability/01/index.html
+++ b/probability/01/index.html
@@ -39,6 +39,14 @@
         </div>
     </div>
 
+    <div class="download-container">
+        <a id="download">
+            <button class="download">
+                Download Experiments Summary
+            </button>
+        </a>
+    </div>
+
     <div class="center-article">
         <article class="explanation">
             <h1>Explanation</h1>
