--- a/probability/01/index.html
+++ b/probability/01/index.html
@@ -59,7 +59,7 @@
 
                 A good number of the things around us occur randomly i.e in an unpredictable manner.
                 It is difficult to tell when an event will occur but we can determine the likelihood of
-                it event occuring.
+                the event occuring.
                 That is what Probability is all about.
                 <br>
                 <br>
