--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
                 </button>
             </a>
         </div>
+<div>
+            <h2>Digital Lock</h2>
+            <a href="/digital lock/">
+                <button>
+                    Look Up
+                </button>
+            </a>
+        </div>
     </div>
     <style>
         * {
