add and style submit button

--- a/what-scale/index.html
+++ b/what-scale/index.html
@@ -14,10 +14,13 @@
         <h1>What Scale ?</h1>
         
         <form id="form">
-            <input placeholder="Enter the max value" type="number" name="Max Value" id="max">
-            <input placeholder="Enter the min value" type="number" name="" id="min">
+            <input placeholder="Enter the max value" type="text" name="Max Value" id="max">
+            <input placeholder="Enter the min value" type="text" name="" id="min">
             <input placeholder="Enter the number of squares available" type="number" name="Number of Squares" id="numSquares">
             <input placeholder="Number of divisions in a square" type="number" name="Subdivisions" id="subdivisions">
+            <button type="submit">
+                calculate
+            </button>
         </form>
     </main>
 </body>
