--- a/what-scale/index.html
+++ b/what-scale/index.html
@@ -37,9 +37,9 @@
             little app with the concept of <a href="https://en.wikipedia.org/wiki/Finite-state_machine">Finite State machines</a> I learned before going to bed the previous night.
             
             This app specifically implements a <em>Non-Deterministic finite automaton</em>. Below is the state diagram describing the states and transitions occuring underneath.
-            <img src="diagram.png" alt="diagram">
+            <img src="./diagram.png" alt="diagram">
             <p>Below follows my mathematical definition of the state machine.</p>
-            <img src="description.png" alt="diagram">
+            <img src="./description.png" alt="diagram">
         </p>
         
         <p>The code is entirely open source. View it <a href="https://github.com/JosiasAurel/experiments/tree/master/what-scale">here</a> </p>
