--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
                 </button>
             </a>
         </div>
+        <div>
+            <h2>What Scale</h2>
+            <a href="/what-scale/">
+                <button>
+                    Look Up
+                </button>
+            </a>
+        </div>
     </div>
     <style>
         * {
